Enhanced the plugin, start supporting folia and optimize it